[package]
name = "locker"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['parking_lot_core', 'extra', 'std']
extra = []
std = []
alloc = []

[dependencies]
cfg-if = '*'

[dependencies.parking_lot_core]
version = '*'
optional = true